ros noetic build fixes

--- a/map_creator/CMakeLists.txt
+++ b/map_creator/CMakeLists.txt
@@ -17,6 +17,12 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 find_package(octomap REQUIRED)
+find_package(Boost REQUIRED COMPONENTS system)
+find_package(HDF5 COMPONENTS C CXX HL REQUIRED)
+link_directories( ${HDF5_LIBRARY_DIRS} )
+include_directories( ${Boost_INCLUDE_DIRS} )
+
+find_package(fmt)
 
 add_message_files(
  FILES
@@ -46,13 +52,15 @@ catkin_package(
 
 include_directories(include ${catkin_INCLUDE_DIRS} ${OCTOMAP_INCLUDE_DIRS} ${HDF5_INCLUDE_DIR} ${PCL_INCLUDE_DIR})
 
+set (LINK_LIBS ${LINK_LIBS} ${HDF5_C_${LIB_TYPE}_LIBRARY})
+
 add_library(sphere_discretization  src/sphere_discretization.cpp)
 add_library(kinematics  src/kinematics.cpp )
 add_library(hdf5_dataset  src/hdf5_dataset.cpp)
 
-target_link_libraries(sphere_discretization  ${catkin_LIBRARIES} ${OCTOMAP_LIBRARIES} ${PCL_LIBRARY_DIRS})
-target_link_libraries(kinematics  ${catkin_LIBRARIES} -llapack)
-target_link_libraries(hdf5_dataset  ${catkin_LIBRARIES} -lhdf5 -lhdf5_cpp)
+target_link_libraries(sphere_discretization  ${catkin_LIBRARIES} ${OCTOMAP_LIBRARIES} ${PCL_LIBRARY_DIRS} ${Boost_LIBRARIES} fmt::fmt)
+target_link_libraries(kinematics  ${catkin_LIBRARIES} -llapack ${Boost_LIBRARIES} fmt::fmt)
+target_link_libraries(hdf5_dataset  ${catkin_LIBRARIES} ${HDF5_CXX_LIBRARIES} ${Boost_LIBRARIES} fmt::fmt)
 
 install(TARGETS sphere_discretization kinematics hdf5_dataset
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
@@ -66,26 +74,26 @@ install(DIRECTORY include/${PROJECT_NAME}/
 
 add_executable(create_reachability_map src/create_reachability_map.cpp)
 add_dependencies(create_reachability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(create_reachability_map sphere_discretization kinematics  hdf5_dataset ${catkin_LIBRARIES})
+target_link_libraries(create_reachability_map sphere_discretization kinematics  hdf5_dataset ${catkin_LIBRARIES} ${Boost_LIBRARIES} fmt::fmt)
 
 add_executable(create_inverse_reachability_map src/create_inverse_reachability_map.cpp)
 add_dependencies(create_inverse_reachability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(create_inverse_reachability_map sphere_discretization kinematics  hdf5_dataset ${catkin_LIBRARIES})
+target_link_libraries(create_inverse_reachability_map sphere_discretization kinematics  hdf5_dataset ${catkin_LIBRARIES} ${Boost_LIBRARIES} fmt::fmt)
 
 add_executable(create_capability_map src/create_capability_map.cpp)
 add_dependencies(create_capability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(create_capability_map sphere_discretization kinematics hdf5_dataset ${catkin_LIBRARIES})
+target_link_libraries(create_capability_map sphere_discretization kinematics hdf5_dataset ${catkin_LIBRARIES} ${Boost_LIBRARIES} fmt::fmt)
 
 add_executable(load_reachability_map src/load_reachability_map.cpp)
 add_dependencies(load_reachability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(load_reachability_map  hdf5_dataset ${catkin_LIBRARIES})
+target_link_libraries(load_reachability_map  hdf5_dataset ${catkin_LIBRARIES} ${Boost_LIBRARIES} fmt::fmt)
 
 add_executable(load_capability_map src/load_capability_map.cpp)
 add_dependencies(load_capability_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(load_capability_map  hdf5_dataset ${catkin_LIBRARIES})
+target_link_libraries(load_capability_map  hdf5_dataset ${catkin_LIBRARIES} ${Boost_LIBRARIES} fmt::fmt)
 
 
 if(CATKIN_ENABLE_TESTING)
   catkin_add_gtest(utest test/utest.cpp)
-  target_link_libraries(utest sphere_discretization ${catkin_LIBRARIES})
+  target_link_libraries(utest sphere_discretization ${catkin_LIBRARIES} ${Boost_LIBRARIES} fmt::fmt)
 endif()
